[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtp-sdk"
version = "0.2.0"
description = "Add MTP --describe support to any Click CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["mtp_sdk*"]
